@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: client.c,v 1.43 1999/08/17 05:44:56 lusky Exp $
+ *  $Id: client.c,v 1.44 1999/08/18 04:04:52 lusky Exp $
  */
 #include "client.h"
 #include "class.h"
@@ -610,8 +610,10 @@ time_t check_pings(time_t currenttime)
       else
 #if defined(SEND_FAKE_KILL_TO_CLIENT) && defined(IDLE_CHECK)
         {
+	  char *killer;
+	  strcat(killer, "AutoKILL");
           if (fakekill)
-            sendto_prefix_one(cptr, cptr, ":AutoKILL KILL %s :(%s)",
+            sendto_prefix_one(cptr, cptr, ":%s KILL %s :(%s)", killer,
             cptr->name, dying_clients_reason[die_index]);
           /* ugh. this is horrible.
            * but I can get away with this hack because of the
