@@ -1,3 +1,7 @@
+*** 19990817_2 by khuon
+Ugh!  Seems sendto_prefix_one() accepts different args now.
+
+
 *** 19990817_1 by lusky
 fixed LIMIT_UH and IDLE_CHECK which were using old structs
 revved patchlevel to b99
